# ActPaddle

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg-sample.toml  sdkconfig.defaults.esp  sdkconfig.defaults.esp32
.cargo/: config.toml
cert/: ca.crt
src/: main.rs  morse.rs  nvskey.rs  param.rs  server.rs  wifi.rs
src/c/: initusb.c
