[package]
name = "actpaddle"
version = "0.1.0"
authors = ["Minoru Tomobe <minoru.tomobe@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["native"]
native =["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = { version = "0.46", features = ["experimental"] }
esp-idf-hal = "0.41"
embedded-svc = "0.25"
embedded-hal = "0.2"
toml-cfg = "0.1"
log = "0.4"
libc = "0.2"
anyhow = "1"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
embuild = "0.31"
anyhow = "1"
cc="1"
