[package]
name = "actpaddle"
version = "0.1.0"
authors = ["Minoru Tomobe <minoru.tomobe@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native", "precision_delay", "m5atom"]
native = ["esp-idf-sys/native"]
precision_delay = []
m5atom = []
m5stamp = []
xiao-esp32c3 = []

[dependencies]
esp-idf-sys = { version = "0.35", features = ["binstart"] }
esp-idf-svc = { version = "0.49", features = ["experimental"] }
esp-idf-hal = "0.44"
embedded-svc = "0.28"
embedded-hal = "1"
toml-cfg = "0.2"
log = "0.4.22"
libc = "0.2.161"
anyhow = { version = "1.0.91", features = ["backtrace", "std"] }
serde = "1.0.213"
serde_json = "1.0.132"
smart-leds = "0.4"
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }

[build-dependencies]
embuild = "0.32"
anyhow = "1"
cc = "1.1.31"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }
